trunk/Archive2/d2/706792027b6475/output
main.cpp:3:20: error: constexpr function never produces a constant expression [-Winvalid-constexpr]
    constexpr char access()
                   ^
main.cpp:5:16: note: cannot refer to element 100 of array of 12 elements in a constant expression
        return str[100] ;
               ^
1 error generated.
